--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -24,6 +24,17 @@
     </div>
 
     <hr>
+    <h3 class="mt-5">Browse Data Tables</h3>
+    <p>View all the raw data in each of your main tables.</p>
+    <div class="list-group">
+     <a href="{% url 'customer-list' %}" class="list-group-item list-group-item-action">View All Customers</a>
+     <a href="{% url 'product-list' %}" class="list-group-item list-group-item-action">View All Products</a>
+     <a href="{% url 'order-list' %}" class="list-group-item list-group-item-action">View All Orders</a>
+     <a href="{% url 'shipper-list' %}" class="list-group-item list-group-item-action">View All Shippers</a>
+     </div>
+     <hr>
+
+
 
     <h3 id="results-title">Results</h3>
     <div id="results-container">
