--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -5,14 +5,37 @@
 <form method="post">
   {% csrf_token %}
   
-  {% if form.errors %}
+  {% if form.non_field_errors %}
     <div class="alert alert-danger">
-        <p><strong>Please correct the errors below:</strong></p>
-        {{ form.errors }}
+        {% for error in form.non_field_errors %}<p>{{ error }}</p>{% endfor %}
     </div>
   {% endif %}
 
-  {{ form.as_p }}
+  <div class="mb-3">
+      <label for="{{ form.username.id_for_label }}" class="form-label">Username</label>
+      {{ form.username }}
+      {% if form.username.errors %}<div class="text-danger mt-1">{{ form.username.errors }}</div>{% endif %}
+  </div>
+
+  <div class="mb-3">
+      <label for="{{ form.password1.id_for_label }}" class="form-label">Password</label>
+      {{ form.password1 }}
+      
+      <div id="password-feedback" class="form-text"></div>
+      
+      {% if form.password1.errors %}<div class="text-danger mt-1">{{ form.password1.errors }}</div>{% endif %}
+  </div>
+
+  <div class="mb-3">
+      <label for="{{ form.password2.id_for_label }}" class="form-label">Password confirmation</label>
+      {{ form.password2 }}
+      {% if form.password2.errors %}<div class="text-danger mt-1">{{ form.password2.errors }}</div>{% endif %}
+  </div>
+  
   <button type="submit" class="btn btn-primary">Sign Up</button>
 </form>
+{% endblock %}
+
+{% block scripts %}
+
 {% endblock %}
