--- a/templates/base.html
+++ b/templates/base.html
@@ -35,5 +35,10 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     {% block scripts %}{% endblock %}
+    <footer class="mt-auto py-3 bg-light text-center">
+    <div class="container">
+        <span class="text-muted">Created by Tanish Dhar</span>
+    </div>
+</footer>
 </body>
 </html>
